
v0.37.6		10-Aug-2003

	general:
		Changed all Linux references into GNU/Linux.
		Changed the address of the FSF in all sources.
		Removed memwatch debugger.
		Changed all gif and jpg images to png images.
		Added a setup switch for the nodes for selecting the wrong
		binkp long filenames escape method for Argus and Irex nodes.

	nodelist.a:
		Removed some of the debug logging.

	mbcico:
		Completly changed the files inbound receive, all files are now
		first stored in a unique per node temporary inbound directory.
		Only after a successfull session all received files are moved
		to the final inbound directory. Hopefully this will solve the
		resync problems.
		The other goodie is that this is more safe on busy multiline
		systems.
		Fixed the binkp escape sequence which is wrong in the FSP, this
		is selectable in the nodes setup.
		A light improvement in session handshake setup timers.
		Added EMSI handshake timers, this gives a more relaxed EMSI
		handshake.
		Set the EMSI receive failure count to 20 instead of 6, we can
		now even accept buggy maindoor sessions and still display a
		banner.
		For FTS-0001 sessions the mail password was used instead of the
		session password. Also improved the password check.
		The product code was not entered in the FTS-0001 packet headers.

	mbsetup:
		In the nodes setup a switch is added to fallback to the wrong
		binkp escape method.


v0.37.5		12-Jul-2003 - 10-Aug-2003

	upgrade:
		Check settings menu 1.5.21 for maximum allowed logins.

	global:
		Added switches for binkp CRC mode in global and node records.

	common.a:
		Node locking tests for non-stale lockfiles older then 6 hours.
		Added general code for prgram locking.

	mbcico:
		Implemented CRAM rev.4 change in binkp driver.
		Binkp now reports binkp/1.1, if filerequests are allowed.
		Binkp now only sends Wazoo requests if the remote is binkp/1.1
		and file requests are allowed.
		Binkp now sends M_BSY to the remote when the bbs is closed.