@@ -18,7 +18,7 @@ Full tic file support, including extended
 tic files.
 OS: GNU/Linux, NetBSD and FreeBSD.
 Originating sites 2:280/2802@fidonet and
-http://mbse.sourceforge.net/
+http://www.mbse.dds.nl/
 Copyright by Michiel Broek.
 Released under the terms of the GNU Public
 License.
